# swagger.json
@@ -1,120 +1,112 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "title": "test API",
-    "version": "v1"
-  },
-  "host": "localhost:3000",
-  "basePath": "/",
-  "tags": [
-    {
-      "name": "API functions",
-      "description": "API functions of our application"
-    }
-  ],
-  "paths": {
-    "/user/registration": {
-      "post": {
-        "tags": [
-          "User"
-        ],
-        "description": "Create new user in system",
-        "parameters": [
-          {
-            "name": "user",
-            "in": "body",
-            "description": "User that we want to create",
-            "schema": {
-              "$ref": "#/components/schemas/User"
+    "swagger": "2.0",
+    "info": {
+        "title": "test API",
+        "version": "v1"
+    },
+    "host": "localhost:3000",
+    "basePath": "/",
+    "tags": [
+        {
+            "name": "API functions",
+            "description": "API functions of our application"
+        }
+    ],
+    "paths": {
+        "/user/registration": {
+            "post": {
+                "tags": ["User"],
+                "description": "Create new user in system",
+                "parameters": [
+                    {
+                        "name": "user",
+                        "in": "body",
+                        "description": "User that we want to create",
+                        "schema": {
+                            "$ref": "#/components/schemas/User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "New user is created",
+                        "schema": {
+                            "$ref": "#/components/schemas/User"
+                        }
+                    }
+                }
             }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "New user is created",
-            "schema": {
-              "$ref": "#/components/schemas/User"
+        }
+    },
+    "components": {
+        "schemas": {
+            "User": {
+                "type": "object",
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    },
+                    "login": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                    }
+                }
+            },
+            "Product_category": {
+                "type": "object",
+                "properties": {
+                    "category": {
+                        "type": "string"
+                    }
+                }
+            },
+            "Product": {
+                "type": "object",
+                "properties": {
+                    "description": {
+                        "type": "string"
+                    },
+                    "price": {
+                        "type": "integer"
+                    },
+                    "amount_left": {
+                        "type": "integer"
+                    },
+                    "category_id": {
+                        "type": "integer"
+                    }
+                }
+            },
+            "Orders": {
+                "type": "object",
+                "properties": {
+                    "orders_date": {
+                        "type": "integer"
+                    },
+                    "user_id": {
+                        "type": "integer"
+                    }
+                }
+            },
+            "Sales": {
+                "type": "object",
+                "properties": {
+                    "product_id": {
+                        "type": "integer"
+                    },
+                    "order_id": {
+                        "type": "integer"
+                    },
+                    "quantity": {
+                        "type": "integer"
+                    }
+                }
             }
-          }
         }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "User": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "login": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        }
-      },
-      "Product_category": {
-        "type": "object",
-        "properties": {
-          "category": {
-            "type": "string"
-          }
-        }
-      },
-      "Product": {
-        "type": "object",
-        "properties": {
-          "description": {
-            "type": "string"
-          },
-          "price": {
-            "type": "integer"
-          },
-          "amount_left": {
-            "type": "integer"
-          },
-          "category_id": {
-            "type": "integer"
-          }
-        }
-      },
-      "Orders": {
-        "type": "object",
-        "properties": {
-          "orders_date": {
-            "type": "integer"
-          },
-          "user_id": {
-            "type": "integer"
-          }
-        }
-      },
-      "Sales": {
-        "type": "object",
-        "properties": {
-          "product_id": {
-            "type": "integer"
-          },
-          "order_id": {
-            "type": "integer"
-          },
-          "quantity": {
-            "type": "integer"
-          }
-        }
-      }
-    }
-  },
-  "schemes": [
-    "http"
-  ],
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ]
+    },
+    "schemes": ["http"],
+    "consumes": ["application/json"],
+    "produces": ["application/json"]
 }
